--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ __pycache__/
 # C extensions
 *.so
 
+# Pycharm
+.idea
+/venv
+
 # Distribution / packaging
 .Python
 build/
@@ -127,3 +131,17 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# env files
+.env
+.secrets.env
+
+# Docker volumes
+postgres-data/
+/deploy/local_db/
+
+# logs
+bookstore_billing.log
+bookstore_billing_errors.log
+consumed_data.log
+report_*.txt
