--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,9 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[dev-packages]
+black = "==23.1.0"
+
 [packages]
 flask = "==2.2.2"
 flask-sqlalchemy = "==3.0.3"
